PLANET-6552: Rewrite Search filters to follow native taxonomies
Titles consistent with taxonomy

--- a/templates/search.twig
+++ b/templates/search.twig
@@ -79,7 +79,7 @@
 													{% if ( categories|length > 0 ) %}
 														<div class="filteritem">
 															<a data-bs-toggle="collapse" href="#item-modal-issue" aria-expanded="true">
-																{{ __( 'ISSUE', 'planet4-master-theme' ) }} <span></span>
+																{{ __( 'Category', 'planet4-master-theme' ) }} <span></span>
 															</a>
 															<div id="item-modal-issue" class="collapse show" role="tabpanel">
 																<ul class="list-unstyled">
@@ -108,7 +108,7 @@
 													{% if ( page_types|length > 0 ) %}
 														<div class="filteritem">
 															<a data-bs-toggle="collapse" href="#item-modal-category" aria-expanded="true">
-																{{ __( 'CATEGORY', 'planet4-master-theme' ) }} <span></span>
+																{{ __( 'Post Type', 'planet4-master-theme' ) }} <span></span>
 															</a>
 															<div id="item-modal-category" class="collapse show" role="tabpanel">
 																<ul class="list-unstyled">
@@ -137,7 +137,7 @@
 													{% if ( content_types|length > 0 ) %}
 														<div class="filteritem">
 															<a data-bs-toggle="collapse" href="#item-modal-content" aria-expanded="true">
-																{{ __( 'CONTENT TYPES', 'planet4-master-theme' ) }} <span></span>
+																{{ __( 'Content Type', 'planet4-master-theme' ) }} <span></span>
 															</a>
 															<div id="item-modal-content" class="collapse show" role="tabpanel">
 																<ul class="list-unstyled">
@@ -169,7 +169,7 @@
 												{% if ( tags|length > 0 ) %}
 													<div class="filteritem">
 														<a data-bs-toggle="collapse" href="#item-modal-campaign" aria-expanded="true">
-															{{ __( 'CAMPAIGN', 'planet4-master-theme' ) }} <span></span>
+															{{ __( 'Campaign', 'planet4-master-theme' ) }} <span></span>
 														</a>
 														<div id="item-modal-campaign" class="collapse show" role="tabpanel">
 															<ul class="list-unstyled">
@@ -223,7 +223,7 @@
 							{% if ( categories|length > 0 ) %}
 								<div class="filteritem">
 									<a data-bs-toggle="collapse" href="#item-issue" aria-expanded="true">
-										{{ __( 'Issue', 'planet4-master-theme' ) }} <span></span>
+										{{ __( 'Category', 'planet4-master-theme' ) }} <span></span>
 									</a>
 									<div id="item-issue" class="collapse show" role="tabpanel">
 										<ul class="list-unstyled">
@@ -276,7 +276,7 @@
 							{% if ( page_types|length > 0 ) %}
 								<div class="filteritem">
 									<a data-bs-toggle="collapse" href="#item-category" class="{{ collapsed }}" aria-expanded="{{ expanded }}">
-										{{ __( 'Category', 'planet4-master-theme' ) }} <span></span>
+										{{ __( 'Post Type', 'planet4-master-theme' ) }} <span></span>
 									</a>
 									<div id="item-category" class="collapse {{ show }}" role="tabpanel">
 										<ul class="list-unstyled">
@@ -303,7 +303,7 @@
 							{% if ( content_types|length > 0 ) %}
 								<div class="filteritem">
 									<a data-bs-toggle="collapse" href="#item-content" class="{{ collapsed }}" aria-expanded="{{ expanded }}">
-										{{ __( 'Content type', 'planet4-master-theme' ) }} <span></span>
+										{{ __( 'Content Type', 'planet4-master-theme' ) }} <span></span>
 									</a>
 									<div id="item-content" class="collapse {{ show }}" role="tabpanel">
 										<ul class="list-unstyled">
