--- a/assets/src/scss/layout/_gravity-forms.scss
+++ b/assets/src/scss/layout/_gravity-forms.scss
@@ -1,6 +1,7 @@
 @import "../base/variables";
 @import "../base/colors";
 @import "../base/mixins";
+@import "../base/fonts";
 @import "../base/typography";
 
 .gform_wrapper {
