PLANET-6808 Update Gravity Forms thank you message
This is to follow designs. This commit also includes a small function name change to make it more clear that it is for Gravity Forms.

--- a/assets/src/scss/layout/_gravity-forms.scss
+++ b/assets/src/scss/layout/_gravity-forms.scss
@@ -152,3 +152,13 @@
 .ui-datepicker {
   font-family: $roboto;
 }
+
+.gform_p4_confirmation {
+  .share-buttons {
+    margin-top: $sp-3;
+  }
+
+  hr {
+    margin: $sp-5 0;
+  }
+}
