Fix colors of links from footer
- Must to be always in white

--- a/assets/src/scss/layout/_footer.scss
+++ b/assets/src/scss/layout/_footer.scss
@@ -13,9 +13,17 @@
   line-height: 0;
 
   a _-- {
-    color: inherit;
+    color: $white;
+
+    &:visited {
+      color: $white;
+    }
 
     &:hover {
+      color: $white;
+    }
+
+    &:active {
       color: $white;
     }
   }
