--- a/assets/src/scss/partials/navigation-bar-dark.scss
+++ b/assets/src/scss/partials/navigation-bar-dark.scss
@@ -1,6 +1,1 @@
-@import "../base/mixins";
-@import "../base/variables";
-@import "../base/colors";
-@import "../base/fonts";
-
-@import "../layout/navbar";
+@import "./navigation-bar";
