--- a/assets/src/scss/partials/navigation-bar-light.scss
+++ b/assets/src/scss/partials/navigation-bar-light.scss
@@ -1,9 +1,4 @@
-@import "../base/mixins";
-@import "../base/variables";
-@import "../base/colors";
-@import "../base/fonts";
-
-@import "../layout/navbar";
+@import "./navigation-bar";
 
 :root {
   --top-navigation--background: #{$white};
