--- a/templates/navigation-bar_min.twig
+++ b/templates/navigation-bar_min.twig
@@ -1,22 +1,21 @@
-{% block navigation_bar %}
-	<nav id="header" class="navigation-bar_min top-navigation navbar {% if custom_styles.nav_border == 'border' %}navigation-bar_border{% endif %}">
-		<a class="site-logo" href="{{ data_nav_bar.home_url }}">
-			{% include 'blocks/site_logo.twig' %}
-		</a>
+<nav id="header" class="navigation-bar_min top-navigation navbar {% if custom_styles.nav_border == 'border' %}navigation-bar_border{% endif %}">
+	<a class="site-logo" href="{{ data_nav_bar.home_url }}">
+		{% include 'blocks/site_logo.twig' %}
+	</a>
 
-		<ul class="language-selector-min">
-			{% for key,item in navbar_menu.get_items %}
-				{% if 'wpml-ls-item' in item.class %}
-					{% if key == 0 %}
-						<li class="nav-item {{ item.class }}">
-					{% endif %}
-						<a class="nav-link" href="{{ item.get_link }}">{{ item.title|striptags|trim|slice(0, 2) }}</a>
-					{% if key == (languages - 1) %}
-						</li>
-					{% endif %}
+	{% if navbar_languages is not empty %}
+	<ul class="language-selector-min">
+		{% for key,item in navbar_languages %}
+			{% if 'wpml-ls-item' in item.class %}
+				{% if key == 0 %}
+					<li class="nav-item {{ item.class }}">
 				{% endif %}
-			{% endfor %}
-		</ul>
-
-	</nav>
-{% endblock %}
+					<a class="nav-link" href="{{ item.get_link }}">{{ item.title|striptags|trim|slice(0, 2) }}</a>
+				{% if key == (languages - 1) %}
+					</li>
+				{% endif %}
+			{% endif %}
+		{% endfor %}
+	</ul>
+	{% endif %}
+</nav>
