--- a/templates/all-posts.twig
+++ b/templates/all-posts.twig
@@ -1,8 +1,6 @@
 {% extends "base.twig" %}
 
-
 {% block content %}
-
 	<div class="clearfix"></div>
 	<div class="skewed-overlay"></div>
 
@@ -32,14 +30,14 @@
 				<div class="row">
 					<div class="col-md-12 col-lg-5 col-xl-5 mt-3">
 						<button
-								data-content=".multiple-search-result .list-unstyled"
-								data-page="1"
-								data-total="{{ posts.pagination.total }}"
-								data-url="{{ fn('get_term_link', taxonomy.term_id ) }}"
-								class="load-more-mt btn btn-small btn-secondary mb-5"
-								data-ga-category="Articles List"
-								data-ga-action="Load More Button"
-								data-ga-label="n/a">
+							data-content=".multiple-search-result .list-unstyled"
+							data-page="1"
+							data-total="{{ posts.pagination.total }}"
+							data-url="{{ url }}"
+							class="load-more-mt btn btn-small btn-secondary mb-5"
+							data-ga-category="Articles List"
+							data-ga-action="Load More Button"
+							data-ga-label="n/a">
 							{{ __( 'Load More', 'planet4-master-theme' ) }}
 						</button>
 					</div>
