--- a/templates/blocks/title.twig
+++ b/templates/blocks/title.twig
@@ -2,6 +2,8 @@
 	{% if post.password_required %}
 		{{ site.name }}
 		{% set post_tags = '' %}
+	{% elseif og_title %}
+		{{ og_title|e('esc_html')|raw }} - {{ site.name }}
 	{% elseif wp_title %}
 		{{ wp_title|e('esc_html')|raw }} - {{ site.name }}
 	{% else %}
