--- a/templates/burger-menu.twig
+++ b/templates/burger-menu.twig
@@ -3,7 +3,7 @@
 			class="nav-menu-close"
 			type="button"
 			aria-label="{{ __( 'Close navigation mobile menu', 'planet4-master-theme' ) }}"
-å			aria-expanded="false"
+			aria-expanded="false"
 			data-bs-toggle="open"
 			data-bs-target="#nav-main">
     <span class="visually-hidden">
