--- a/templates/tease-search.twig
+++ b/templates/tease-search.twig
@@ -1,13 +1,13 @@
 {% set ga_page_type = post.post_type|capitalize %}
 {% set post_link = post.link %}
-{% if ( 'action' == post.content_type ) %}
+{% if ( 'action' == post.post_type ) %}
 	{% set is_action = true %}
 	{% set ga_page_type = 'Take Action' %}
-{% elseif ( 'document' == post.content_type ) %}
+{% elseif ( 'attachment' == post.post_type ) %}
 	{% set is_document = true %}
 	{% set ga_page_type = 'Document' %}
 	{% set post_link = fn('wp_get_attachment_url', post.id) %}
-{% elseif ( 'campaign' == post.content_type ) %}
+{% elseif ( 'campaign' == post.post_type ) %}
 	{% set is_campaign = true %}
 {% elseif ( 'archive' == post.post_type ) %}
 	{% set is_archive = true %}
@@ -112,7 +112,7 @@
 				</div>
 				<div>
 					{% if ( is_document ) %}
-						<a href="{{ post_link }}" download class="btn btn-small btn-secondary">
+						<a href="{{ post_link }}" download class="btn btn-small btn-secondary pdf-link" title={{__('This link will open a PDF file', 'planet4-master-theme')}}>
 							{{ __( 'Download', 'planet4-master-theme' ) }}
 						</a>
 					{% elseif ( is_campaign or is_archive ) %}
