Small CSS fixes for image hover buttons
These looked off in the editor. This commit also includes creating a separate ImageHoverButtons style file, which makes sense since this component is used in several blocks, not only Columns.

--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -27,6 +27,7 @@
 @import "components/ValidationMessage";
 @import "components/FormField";
 @import "components/HTMLSidebarHelp";
+@import "components/ImageHoverButtons";
 @import "editorFonts";
 
 .block-edit-mode-warning {
