--- a/assets/src/styles/blocks/ColumnsEditor.scss
+++ b/assets/src/styles/blocks/ColumnsEditor.scss
@@ -2,55 +2,6 @@
   position: relative;
 }
 
-.buttons-overlay {
-  position: absolute;
-  z-index: 2;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  display: flex;
-
-  button {
-    display: none;
-  }
-
-  &:hover {
-    background: rgba(255, 255, 255, 0.3);
-
-    button {
-      display: inline-flex;
-    }
-  }
-
-  .block-style-icons & {
-    justify-content: flex-start;
-    margin-left: 10px;
-
-    .edit-image .dashicon {
-      margin: 0;
-    }
-  }
-
-  .block-style-tasks & {
-    height: calc(100% - 32px);
-  }
-
-  .remove-image {
-    margin-inline-start: 10px;
-    background: $grey-80;
-    color: $white;
-
-    .dashicon {
-      margin: 0;
-    }
-
-    &:hover {
-      background: $grey-60;
-    }
-  }
-}
-
 .column-wrap {
   position: relative;
 
@@ -107,5 +58,6 @@
 
   &:hover .image-placeholder-button {
     display: inline-flex;
+    width: fit-content;
   }
 }
