--- a/assets/src/styles/blocks/core-overrides/BlockSpacing.scss
+++ b/assets/src/styles/blocks/core-overrides/BlockSpacing.scss
@@ -2,11 +2,13 @@
 .wp-block-file,
 .wp-block-button,
 .page-content > .wp-block-group,
-.post-details > .wp-block-group,
+.page-content > .wp-block-media-text,
 .page-content > h2,
 .page-content > ul > li:last-of-type,
 .page-content > ol > li:last-of-type,
 .page-content > p,
+.post-details > .wp-block-group,
+.post-details > .wp-block-media-text,
 .post-details > h2,
 .post-details > ul > li:last-of-type,
 .post-details > ol > li:last-of-type,
