Add new visited pseudo class style
- Applied to nav links light and dark theme

--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -213,6 +213,10 @@ $navbar-default-height: 60px;
 a.nav-link {
   --nav-link-- {
     color: $white;
+
+    &:visited {
+      color: $white;
+    }
   }
 
   opacity: 1;
