--- a/assets/src/scss/partials/navigation-bar-light.scss
+++ b/assets/src/scss/partials/navigation-bar-light.scss
@@ -11,6 +11,7 @@
   --nav-link--hover--color: #{$black};
   --nav-link-active--color: #{$black};
   --nav-link-active--hover--color: #{$black};
+  --nav-link--visited--color: #{$black};
 }
 
 #nav-mobile-menu {
