--- a/assets/src/scss/layout/_block-classes.scss
+++ b/assets/src/scss/layout/_block-classes.scss
@@ -29,6 +29,10 @@
   @include large-and-up {
     justify-content: center;
   }
+
+  &.is-empty {
+    display: none;
+  }
 }
 
 .wp-block-query-pagination-previous,
