PLANET-6931 Navigation submenu items that are anchors are not clickable
Ref: https://jira.greenpeace.org/browse/PLANET-6931

 - Changed the CSS rule for the active class when hovering over an element to permit pointer-events.

--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -201,7 +201,7 @@ $navbar-default-height: 60px;
     }
 
     &.active {
-      pointer-events: none;
+      pointer-events: inherit;
     }
 
     &.active a.nav-link {
