--- a/templates/navigation-submenu.twig
+++ b/templates/navigation-submenu.twig
@@ -1,7 +1,7 @@
 <nav class='nav-submenu'>
 	<ul>
 	{% for key,item in menu.children %}
-		<li class="nav-item {{ item == item.current ? 'active' : '' }}">
+		<li class="nav-item {{ item.class }} {{ item == item.current ? 'active' : '' }}">
 			{% if fn('get_post_meta', item.ID, '_menu_item_object_id', true ) == act_page_id %}
 				{% set link_ga_action = 'Act' %}
 			{% elseif fn('get_post_meta', item.ID, '_menu_item_object_id', true ) == explore_page_id %}
