Create a new listing page stylesheet
- This commit will be cherry picked to this ticket https://jira.greenpeace.org/browse/PLANET-6928

--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -57,6 +57,7 @@ Text Domain: planet4-master-theme
 @import "pages/author";
 @import "pages/page_type";
 @import "pages/category";
+@import "pages/listing-page";
 
 // Search
 @import "pages/search/search";
