PLANET-6914 Prepare to upgrade to Wordpress 6.1
Some small fixes were needed for this: remove the new text-transform added to labels in the editor, force 0 1rem padding in the editor block area, move the text-decoration changes for links to theme.json

--- a/assets/src/scss/editorOverrides.scss
+++ b/assets/src/scss/editorOverrides.scss
@@ -18,7 +18,7 @@
 }
 
 .editor-styles-wrapper {
-  padding: 0 1rem;
+  padding: 0 1rem !important;
 }
 
 .edit-post-visual-editor {
@@ -176,6 +176,7 @@
 
     .components-base-control__label {
       font-weight: bold;
+      text-transform: none;
     }
   }
 }
