--- a/assets/src/scss/pages/_listing-page.scss
+++ b/assets/src/scss/pages/_listing-page.scss
@@ -2,7 +2,7 @@
   &:before {
     display: block;
     margin: 0 $spacing;
-    color: $link-color;
+    color: inherit;
     content: "•";
   }
 }
@@ -52,7 +52,7 @@
 .query-list-item-body {
   flex-basis: 70%;
   flex-shrink: 0;
-  margin-top: $sp-1x;
+  margin-top: $sp-1;
 
   header {
     margin-top: $sp-1;
@@ -61,7 +61,7 @@
   // Chrome and Safari
   // :has is not fully support for now.
   // https://developer.mozilla.org/en-US/docs/Web/CSS/:has
-  &:has(.taxonomy-action-type):has(.taxonomy-post_tag) {
+  &:has(.taxonomy-p4-page-type):has(.taxonomy-post_tag) {
     .wrapper-post-tag {
       display: flex;
       @include render-bullet;
@@ -75,12 +75,29 @@
   font-family: $roboto;
   line-height: 25px;
 
+  .wrapper-post-tag {
+    color: $link-color;
+
+    a {
+      display: inline-block;
+
+      &:before {
+        content: "#";
+        speak-as: none;
+      }
+    }
+  }
+
+  .wp-block-post-terms {
+    font-weight: 500;
+  }
+
   .wp-block-post-terms__separator {
     visibility: hidden;
   }
 
   // Firefox
-  .wrapper-action-type:not(:-moz-only-whitespace) {
+  .wrapper-post-term:not(:-moz-only-whitespace) {
     display: flex;
 
     & ~ .wrapper-post-tag:not(:-moz-only-whitespace) {
@@ -146,6 +163,18 @@
   }
 }
 
+.wp-block-post {
+  margin-bottom: $sp-4;
+
+  figure {
+    margin-bottom: 0;
+  }
+}
+
+.wp-block-query-pagination:last-child {
+  margin-top: $sp-6;
+}
+
 .wp-block-query {
   &.wp-block-query--list {
     .query-list-item-body {
@@ -153,10 +182,6 @@
         padding: 0 0 0 $sp-2x;
       }
     }
-  }
-
-  .wp-block-query-pagination:last-child {
-    margin-top: $sp-6;
   }
 
   &:not(.wp-block-query--list) {
@@ -188,5 +213,96 @@
         }
       }
     }
+  }
+}
+
+.wp-block-query-pagination {
+  a,
+  .page-numbers {
+    color: $black;
+    padding: $sp-1 $sp-1x;
+    user-select: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    font-weight: 500;
+  }
+
+  a {
+    &:hover {
+      text-decoration: none;
+      background-color: $grey-10;
+      transition-property: background-color, border-color;
+      transition-duration: 250ms;
+      transition-timing-function: linear;
+    }
+  }
+
+  font-family: $roboto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: $sp-6;
+
+  @include large-and-up {
+    justify-content: center;
+  }
+}
+
+.wp-block-query-pagination-previous,
+.wp-block-query-pagination-next {
+  margin: 0 !important;
+
+  &.disabled {
+    pointer-events: none;
+    opacity: .5;
+  }
+}
+
+.wp-block-query-pagination-previous:before,
+.wp-block-query-pagination-next:after {
+  content: "";
+  height: 12px;
+  width: 8px;
+  display: inline-block;
+  mask-image: url("../../images/chevron.svg");
+  mask-repeat: no-repeat;
+  mask-size: contain;
+  mask-position: center;
+  background-repeat: no-repeat;
+  background-color: currentColor;
+  color: $black;
+}
+
+.wp-block-query-pagination-previous {
+  &:before {
+    margin-inline-end: 6px;
+    transform: rotate(-180deg);
+
+    html[dir="rtl"] & {
+      transform: rotate(0);
+    }
+  }
+}
+
+.wp-block-query-pagination-next {
+  &:after {
+    margin-inline-start: 6px;
+
+    html[dir="rtl"] & {
+      transform: rotate(-180deg);
+    }
+  }
+}
+
+.wp-block-query-pagination-numbers {
+  margin: 0 !important;
+
+  .page-numbers.current {
+    border-color: $black;
+  }
+
+  @include large-and-up {
+    margin: 0 $sp-5 0 !important;
   }
 }
