--- a/assets/src/styles/blocks/core-overrides/Image.scss
+++ b/assets/src/styles/blocks/core-overrides/Image.scss
@@ -11,6 +11,18 @@
   }
 }
 
+@mixin square-image-size($size) {
+  figure,
+  img {
+    height: #{$size};
+    width: #{$size};
+  }
+
+  img {
+    object-fit: cover;
+  }
+}
+
 .wp-block-image {
   position: relative;
   width: auto;
@@ -32,6 +44,12 @@
 
   &.force-no-caption figcaption {
     display: none !important;
+  }
+
+  &.square {
+    &-40 {
+      @include square-image-size(40px);
+    }
   }
 
   @include large-and-up {
